deployment/kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-backend
  template:
    metadata:
      labels:
        app: url-shortener-backend
    spec:
      containers:
        - name: url-shortener-backend
          image: docker.io/prasta/url-shortener-backend:1.0.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-backend
spec:
  selector:
    app: url-shortener-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-backend-ingress
spec:
  ingressClassName: public-iks-k8s-nginx
  tls:
  - hosts:
    - link.prastamaha.dev
    secretName: link-prastamaha-dev
  rules:
    - host: link.prastamaha.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: url-shortener-backend
                port:
                  number: 8080
